all files added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                <a href="#">Sell to anyone anywhere</a> <br> <br>
                                <a href="#">Grow your business</a>
                                <a href="#"><p>
-                                <img src="/images/send-app-staging.jpg" alt="Send app QR code">
+                                <img src="./images/send-app-staging.jpg" alt="Send app QR code">
                                <span> Scan to download Send mobile app.</span></p>
                         </a>
                             </div>
@@ -134,7 +134,7 @@
                         </a></li>
                         <li>
                             <a href="#">
-                                <img src="/images/send-app-staging.jpg" alt="Send app QR code">
+                                <img src="./images/send-app-staging.jpg" alt="Send app QR code">
                                <p> Scan to download Send mobile app.</p>
                         </a></li>
                      </ul>
